force-app/main/default/objects/Employee_Time_Card_Account_Target__c/Employee_Time_Card_Account_Target__c.object-meta.xml
<CustomObject>
    <label>Employee Time Card Account Target</label>
    <nameField>
        <displayFormat>ETCAT-{00000}</displayFormat>
        <label>Account Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Time Card Account Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>