force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Card Account Targets</relationshipLabel>
    <relationshipName>Time_Card_Account_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>