force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Account_Territory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory_Fields__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Territory Fields</label>
    <referenceTo>Account_Territory_Fields__c</referenceTo>
    <relationshipLabel>Time Card Account Targets</relationshipLabel>
    <relationshipName>Time_Card_Account_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>