force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Employee_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Employee_Time_Card__c</fullName>
    <label>Employee Time Card</label>
    <referenceTo>Employee_Time_Card__c</referenceTo>
    <relationshipLabel>Account Targets</relationshipLabel>
    <relationshipName>Account_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>