force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Frequency_Status__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Status__c</fullName>
    <formula>IF(
  Actual_Visits__c &gt; Target_Visit_Frequency__c,
  &quot;MCF&quot;,
  IF(
    OR(
      Actual_Visits__c = Target_Visit_Frequency__c,
      AND(Target_Visit_Frequency__c = 0, Actual_Visits__c &gt; 0)
    ),
    &quot;RCF&quot;,
    &quot;LCF&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency Status</label>
    <type>Text</type>
</CustomField>