force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Is_Visited__c.field-meta.xml
<CustomField>
    <fullName>Is_Visited__c</fullName>
    <formula>Actual_Visits__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Visited</label>
    <type>Checkbox</type>
</CustomField>