force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Potentiality__c.field-meta.xml
<CustomField>
    <fullName>Potentiality__c</fullName>
    <label>Potentiality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>