force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Reach_Percent__c.field-meta.xml
<CustomField>
    <fullName>Reach_Percent__c</fullName>
    <formula>IF(
  Target_Visit_Frequency__c &gt; 0,
  MIN(Actual_Visits__c / Target_Visit_Frequency__c, 1),
  IF(Actual_Visits__c &gt; 0, 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reach Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>