force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Card_Account_Targets_By_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>