force-app/main/default/objects/Employee_Time_Card_Account_Target__c/fields/Target_Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Target_Visit_Frequency__c</fullName>
    <label>Target Visit Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>